# jWATCH

./: .gitignore  LICENSE  README.md  pyproject.toml
edgewatch/: __init__.py  __main__.py
edgewatch/analysis/: __init__.py  stats.py  throttle.py
edgewatch/correlation/: __init__.py  engine.py  interpolator.py
edgewatch/edgewatch/: cli.py
edgewatch/ollama/: __init__.py  client.py  stream_parser.py
edgewatch/report/: __init__.py  generator.py  json_exporter.py  rich_renderer.py
edgewatch/storage/: __init__.py  db.py
edgewatch/tegrastats/: __init__.py  parser.py  sampler.py
edgewatch/utils/: __init__.py  mocks.py
tests/: test_client.py  test_correlation_engine.py  test_interpolator.py  test_parser.py  test_sampler.py  test_stream_parser.py  test_throttle.py
