[project]
name = "jwatch"
version = "0.1.1"
description = "Jetson Workload Analysis & Thermal Hardware Correlation - CLI-based LLM benchmarking and hardware profiler for NVIDIA Jetson"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "ProPrak01", email = "proprak01@users.noreply.github.com"}
]
maintainers = [
    {name = "ProPrak01", email = "proprak01@users.noreply.github.com"}
]
keywords = ["llm", "benchmarking", "jetson", "ollama", "profiling", "hardware", "thermal", "nvidia", "edge-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Hardware",
    "Environment :: Console",
]

dependencies = [
    "typer>=0.9.0",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ProPrak01/jwatch"
Documentation = "https://github.com/ProPrak01/jwatch#readme"
Repository = "https://github.com/ProPrak01/jwatch"
"Bug Tracker" = "https://github.com/ProPrak01/jwatch/issues"
"Source Code" = "https://github.com/ProPrak01/jwatch"

[project.scripts]
jwatch = "edgewatch.edgewatch.cli:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["edgewatch*"]
exclude = ["tests*", "assets*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--cov=edgewatch",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
